tests/declaration_files_incremental_haste_name_reducers/declaration_files_incremental_haste_name_reducers.exp
======Start off with the .js files but without the .flow file======
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `AImplementation` [1] is incompatible with boolean [2].
  References:
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
        ^^^^^^^ [1]: `AImplementation`
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestImplementation` [1] is incompatible with boolean [2].
  References:
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
        ^^^^^^^^^^ [1]: `TestImplementation`
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `ADefinition` [1] is incompatible with boolean [2].
  References:
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
        ^^^^^^^ [1]: `ADefinition`
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestDefinition` [1] is incompatible with boolean [2].
  References:
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
        ^^^^^^^^^^ [1]: `TestDefinition`
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `AImplementation` [1] is incompatible with boolean [2].
  References:
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
        ^^^^^^^ [1]: `AImplementation`
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestImplementation` [1] is incompatible with boolean [2].
  References:
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
        ^^^^^^^^^^ [1]: `TestImplementation`
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors


======Start off with the .js files and the .flow file======
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `ADefinition` [1] is incompatible with boolean [2].
  References:
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
        ^^^^^^^ [1]: `ADefinition`
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestDefinition` [1] is incompatible with boolean [2].
  References:
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
        ^^^^^^^^^^ [1]: `TestDefinition`
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `AImplementation` [1] is incompatible with boolean [2].
  References:
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
        ^^^^^^^ [1]: `AImplementation`
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestImplementation` [1] is incompatible with boolean [2].
  References:
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
        ^^^^^^^^^^ [1]: `TestImplementation`
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `ADefinition` [1] is incompatible with boolean [2].
  References:
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
        ^^^^^^^ [1]: `ADefinition`
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestDefinition` [1] is incompatible with boolean [2].
  References:
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
        ^^^^^^^^^^ [1]: `TestDefinition`
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors


======Start off without the .js files and with the .flow file======
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `ADefinition` [1] is incompatible with boolean [2].
  References:
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
        ^^^^^^^ [1]: `ADefinition`
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestDefinition` [1] is incompatible with boolean [2].
  References:
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
        ^^^^^^^^^^ [1]: `TestDefinition`
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `ADefinition` [1] is incompatible with boolean [2].
  References:
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
        ^^^^^^^ [1]: `ADefinition`
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestDefinition` [1] is incompatible with boolean [2].
  References:
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
        ^^^^^^^^^^ [1]: `TestDefinition`
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ Cannot cast `A.foo()` to boolean because `ADefinition` [1] is incompatible with boolean [2].
  References:
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
        ^^^^^^^ [1]: `ADefinition`
    4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
                 ^^^^^^^ [2]: boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ Cannot cast `test.foo()` to boolean because `TestDefinition` [1] is incompatible with boolean [2].
  References:
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
        ^^^^^^^^^^ [1]: `TestDefinition`
    7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                    ^^^^^^^ [2]: boolean


Found 2 errors
